--- a/detail.html
+++ b/detail.html
@@ -8,67 +8,277 @@
     <title>TEST</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/weui.css">
+    <style>
+        [v-clock]{
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="detail">
+    
+    <div class="detail" id="detail">
+        <div id="__nc" v-show="yzState">
+            <div id="nc"></div>
+        </div>
         <div class="topBtnBox">
-            <span>
+            <span @click="history.back()">
                 <img src="./images/back.png" alt="">
             </span>
-            <span>
+            <span @click="getRankingData">
                 <img src="./images/board.png" alt="">
             </span>
         </div>
-        <div class="centerBox">
+        <div class="centerBox" v-clock>
             <div class="title">
-                <img src="./images/detail_bg_01.png" alt="">
-                <h3>01</h3>
+                <img src="./images/detail_bg_01.png" alt="">    
+                <h3>{{detailInfo.ranking}}</h3>
             </div>
             <div class="contain">
                 <div class="text">
                     <span class="logo">
-                        <img src="./images/logo.png" alt="">
+                        <img :src="detailInfo.logo" alt="">
                     </span>
-                    <p class="brand">广汽传祺：15000票</p>
-                    <p class="info">广汽传祺（简称传祺）是广汽集团为提升核心竞争力，实现可持续发展而打造的国产品牌。2010年12月，首款车传祺GA5轿车成功推出市场，随后陆续推出多款车型。2017年，广汽传祺销量达50.86万辆，同比增长37%。</p>
-                    <div class="media">
-                        <video controls="controls" autoplay="autoplay">
-                            <source src="http://www.w3school.com.cn/i/movie.mp4" type="video/mp4" />
+                    <p class="brand">{{detailInfo.name}}：{{detailInfo.vote_num}}票</p>
+                    <p class="info">{{detailInfo.synopsis}}</p>
+                    <div class="media" v-if="detailInfo.video">
+                        <video controls="controls">
+                            <source :src="detailInfo.video" type="video/mp4" />
                         </video>
                     </div>
-                    <span class="toupiao"><img src="./images/toupiao.png" alt=""></span>
+                    <span class="toupiao"  @click="yanzheng"><img src="./images/toupiao.png" alt=""></span>
                 </div>
             </div>
             <div>
                 <img src="./images/detail_bg_03.png" alt="">
             </div>
         </div>
+
+        <!-- 排行榜 -->
+        <div class="board cover" v-show="boardState">
+            <div class="topBtnBox">
+                <span @click.stop="boardState = false">
+                    <img src="./images/back.png" alt="" >
+                </span>
+                <span>
+                    <!-- <img src="./images/rule.png" alt="" @click.stop="ruleState = true"> -->
+                </span>
+            </div>
+            <div class="centerBox">
+                <div class="title">
+                    <img src="./images/detail_bg_01.png" alt="">
+                    <h3>排行榜</h3>
+                </div>
+                <div class="contain">
+                    <div class="boardList">
+                        <ul>
+                            <li class="item">
+                                <span>名次</span>
+                                <span>企业LOGO</span>
+                                <span>企业名</span>
+                                <span>票数</span>
+                            </li>
+                            <li class="item" v-for="(item,index) in rankList">
+                                <span>
+                                    <b>{{item.top}}</b>
+                                </span>
+                                <span>
+                                    <img :src="item.logo" alt="">
+                                </span>
+                                <span>{{item.name}}}</span>
+                                <span>{{item.vote_num}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <img src="./images/detail_bg_03.png" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- 加载中 -->
+        <div id="loadingToast" v-show="loading.status">
+            <div class="weui-mask_transparent"></div>
+            <div class="weui-toast">
+                <i class="weui-loading weui-icon_toast"></i>
+                <p class="weui-toast__content" v-html="loading.txt"></p>
+            </div>
+        </div>
+        <!--按钮提示框-->
+        <!--BEGIN dialog2-->
+        <div class="js_dialog" id="iosDialog2" v-show="dialog.status">
+            <div class="weui-mask"></div>
+            <div class="weui-dialog">
+                <div class="weui-dialog__bd">{{dialog.txt}}</div>
+                <div class="weui-dialog__ft">
+                    <a href="javascript:;" class="weui-dialog__btn weui-dialog__btn_primary" @click="dialog.status = false">知道了</a>
+                </div>
+            </div>
+        </div>
+        <!-- 提示框，1000消失 -->
+        <div class="tipBox" v-show="alert.status">
+            <div class="tibBox_inner">
+                <p v-html="alert.txt"></p>
+            </div>
+        </div>
     </div>
     <script src="js/zepto.min.js"></script>
-    <script type="text/javascript">
-        var basep = "images/", //图片目录
-            preLoadSource = [ //背景资源
-                // basep + "bg.jpg",
-            ];
-    </script>
-    <!-- <script src="js/loading.js"></script> -->
     <script src="js/vue.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="//g.alicdn.com/sd/nch5/index.js?t=2015052012"></script>
     <script>
         //加载资源数组必须在loading之前进行配置
         $(function () {
             new Vue({
-                el: "#index-box",
+                el: "#detail",
                 data: {
-
+                    id:null,
+                    detailInfo:null,
+                    getDetails:'getDetails',             //获取详情页接口
+                    postVote:'postVote',                 //为企业进行投票接口
+                    getRanking:'getRanking',             //获取排行榜接口
+                    loading:{        //加载中弹框
+                        status:false,
+                        txt:'加载中...'
+                    },
+                    dialog:{    //带按钮提示框
+                        status:false,
+                        txt:'这里是提示内容'
+                    },
+                    alert:{     //提示自动消失框
+                        status:false,
+                        txt:'这里是提示内容'
+                    },
+                    boardState:false,
+                    rankList:[],
+                    yzState:false
                 },
                 methods: {
-                    init: function () {
-
+                    //为企业进行投票
+                    postVoteHandle:function(){
+                        var This = this;
+                        $.ajax({
+                            type:'POST',
+                            url:this.postVote,
+                            dataType:'json',
+                            cache:false,
+                            data:{
+                                type:this.id
+                            },
+                            success:function(res){
+                                if(res.status == 0){
+                                    this.alertHandle("投票成功");
+                                }else{
+                                    this.alertHandle(res.msg)
+                                }
+                            }
+                        })
+                    },
+                    //获取企业列表数据
+                    getDetailsHandle:function(){
+                        var This = this;
+                        this.loading.status = true;
+                        $.ajax({
+                            type:'GET',
+                            url:this.getDetails,
+                            dataType:'json',
+                            cache:false,
+                            data:{
+                                type:this.id
+                            },
+                            success:function(res){
+                                this.loading.status = false;
+                                if(res.status == 0){
+                                    This.detailInfo = res.data;   
+                                }else{
+                                    this.alertHandle(res.msg)
+                                }
+                            }
+                        })
+                    },
+                    getRankingData:function(){
+                        this.boardState = true;
+                        var This = this;
+                        this.loading.status = true;
+                        $.ajax({
+                            type:'GET',
+                            url:this.getRanking,
+                            dataType:'json',
+                            cache:false,
+                            success:function(res){
+                                this.loading.status = false;
+                                if(res.status == 0){
+                                    This.rankList = res.data;   
+                                }else{
+                                    this.alertHandle(res.msg)
+                                }
+                            }
+                        })
+                    },
+                    getQueryString: function (name) {
+                        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+                        var r = window.location.search.substr(1).match(reg);
+                        if (r != null) return unescape(r[2]);
+                        return null;
+                    },
+                    //处理提示弹框函数
+                    alertHandle:function(msg){
+                        var This = this;
+                        this.alert.status = true;
+                        this.alert.txt = msg;
+                        setTimeout(function(){
+                            This.alert.status = false;
+                            this.alert.txt = '';
+                        },1500)
+                    },
+                    yanzheng:function(){
+                        var This = this;
+                        this.yzState = true;
+                        var nc_token = ["CF_APP_1", (new Date()).getTime(), Math.random()].join(':');
+                        var nc=NoCaptcha.init({
+                            renderTo: '#nc',
+                            appkey: 'CF_APP_1', 
+                            scene: 'register',
+                            token: nc_token,
+                            trans: {"key1": "code200"},
+                            elementID: ["usernameID"],
+                            is_Opt: 0,
+                            language: "cn",
+                            timeout: 10000,
+                            retryTimes: 5,
+                            errorTimes: 5,
+                            inline:false,
+                            apimap: {
+                                // 'analyze': '//a.com/nocaptcha/analyze.jsonp',
+                                // 'uab_Url': '//aeu.alicdn.com/js/uac/909.js',
+                            },
+                            bannerHidden:false,
+                            initHidden:false,
+                            callback: function (data) {
+                                window.console && console.log(nc_token)
+                                window.console && console.log(data.csessionid)
+                                window.console && console.log(data.sig)
+                                This.yzState = false;
+                                This.postVoteHandle();
+                            },
+                            error: function (s) {
+                            }
+                        });
+                        NoCaptcha.setEnabled(true);
+                        nc.reset();//请务必确保这里调用一次reset()方法
+                        NoCaptcha.upLang('cn', {
+                            'LOADING':"加载中...",//加载
+                            'SLIDER_LABEL': "请向右滑动验证",//等待滑动
+                            'CHECK_Y':"验证通过",//通过
+                            'ERROR_TITLE':"非常抱歉，这出错了...",//拦截
+                            'CHECK_N':"验证未通过", //准备唤醒二次验证
+                            'OVERLAY_INFORM':"经检测你当前操作环境存在风险，请输入验证码",//二次验证
+                            'TIPS_TITLE':"验证码错误，请重新输入"//验证码输错时的提示
+                        });
                     }
                 },
                 mounted: function () {
-                    this.init();
+                    this.id = this.getQueryString('id');
+                    // this.getDetailsHandle();
                 }
             })
         })
