--- a/index.html
+++ b/index.html
@@ -8,40 +8,45 @@
     <title>TEST</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/weui.css">
+    <style>
+        [v-clock]{
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="wrap index_page" id="index-box">
+    <div class="wrap index_page" id="index-box" v-clock>
         <div class="topBtnBox">
             <span>
                 <img src="./images/rule.png" alt="" @click="ruleState = true">
             </span>
             <span> 
-                <img src="./images/board.png" alt="" @click="boardState = true">
+                <img src="./images/board.png" alt="" @click="getRankingData">
             </span>
         </div>
         <div class="titleLogo">
             <img src="./images/title.png" alt="">
         </div>
         <div class="btnBox">
-            <span @click="goArea(1)">
+            <span @click="goArea(3)">
                 <img src="./images/btn_1.png" alt="">
-                <img class="btn_active" v-show="btnIndex == 1" src="./images/active_btn.png" alt="">
+                <img class="btn_active" v-show="btnIndex == 3" src="./images/active_btn.png" alt="">
             </span>
-            <span @click="goArea(2)">
+            <span @click="goArea(4)">
                 <img src="./images/btn_2.png" alt="">
-                <img class="btn_active" v-show="btnIndex == 2" src="./images/active_btn.png" alt="">
+                <img class="btn_active" v-show="btnIndex == 4" src="./images/active_btn.png" alt="">
             </span>
 
         </div>
         <div class="btnBox">
-            <span @click="goArea(3)">
+            <span @click="goArea(1)">
                 <img src="./images/btn_3.png" alt="">
-                <img class="btn_active" v-show="btnIndex == 3" src="./images/active_btn.png" alt="">
+                <img class="btn_active" v-show="btnIndex == 1" src="./images/active_btn.png" alt="">
             </span>
-            <span @click="goArea(4)">
+            <span @click="goArea(2)">
                 <img src="./images/btn_4.png" alt="">
-                <img class="btn_active" v-show="btnIndex == 4" src="./images/active_btn.png" alt="">
+                <img class="btn_active" v-show="btnIndex == 2" src="./images/active_btn.png" alt="">
             </span>
         </div>
         <!-- 活动规则 -->
@@ -93,45 +98,15 @@
                                 <span>企业名</span>
                                 <span>票数</span>
                             </li>
-                            <li class="item" v-for="item in [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]">
+                            <li class="item" v-for="(item,index) in rankList">
                                 <span>
-                                    <b>1</b>
+                                    <b>{{item.top}}</b>
                                 </span>
                                 <span>
-                                    <img src="./images/logo.png" alt="">
+                                    <img :src="item.logo" alt="">
                                 </span>
-                                <span>广汽传祺</span>
-                                <span>100</span>
-                            </li>
-                            <li class="item">
-                                <span>
-                                    <b>1</b>
-                                </span>
-                                <span>
-                                    <img src="./images/logo.png" alt="">
-                                </span>
-                                <span>广汽传祺</span>
-                                <span>100</span>
-                            </li>
-                            <li class="item">
-                                <span>
-                                    <b>1</b>
-                                </span>
-                                <span>
-                                    <img src="./images/logo.png" alt="">
-                                </span>
-                                <span>广汽传祺</span>
-                                <span>100</span>
-                            </li>
-                            <li class="item">
-                                <span>
-                                    <b>1</b>
-                                </span>
-                                <span>
-                                    <img src="./images/logo.png" alt="">
-                                </span>
-                                <span>广汽传祺</span>
-                                <span>100</span>
+                                <span>{{item.name}}}</span>
+                                <span>{{item.vote_num}}</span>
                             </li>
                         </ul>
                     </div>
@@ -139,6 +114,32 @@
                 <div>
                     <img src="./images/detail_bg_03.png" alt="">
                 </div>
+            </div>
+        </div>
+
+        <!-- 加载中 -->
+        <div id="loadingToast" v-show="loading.status">
+            <div class="weui-mask_transparent"></div>
+            <div class="weui-toast">
+                <i class="weui-loading weui-icon_toast"></i>
+                <p class="weui-toast__content" v-html="loading.txt"></p>
+            </div>
+        </div>
+        <!--按钮提示框-->
+        <!--BEGIN dialog2-->
+        <div class="js_dialog" id="iosDialog2" v-show="dialog.status">
+            <div class="weui-mask"></div>
+            <div class="weui-dialog">
+                <div class="weui-dialog__bd">{{dialog.txt}}</div>
+                <div class="weui-dialog__ft">
+                    <a href="javascript:;" class="weui-dialog__btn weui-dialog__btn_primary" @click="dialog.status = false">知道了</a>
+                </div>
+            </div>
+        </div>
+        <!-- 提示框，1000消失 -->
+        <div class="tipBox" v-show="alert.status">
+            <div class="tibBox_inner">
+                <p v-html="alert.txt"></p>
             </div>
         </div>
     </div>
@@ -179,12 +180,56 @@
                     boardState:false,
                     ruleState:false,
                     btnIndex:null,
+                    rankList:[],                      //排行榜数据
+                    getRanking:'getRanking',          //获取排行榜接口
+                    loading:{        //加载中弹框
+                        status:false,
+                        txt:'加载中...'
+                    },
+                    dialog:{    //带按钮提示框
+                        status:false,
+                        txt:'这里是提示内容'
+                    },
+                    alert:{     //提示自动消失框
+                        status:false,
+                        txt:'这里是提示内容'
+                    },
+
                 },
                 methods: {
                     goArea:function(index){
                         this.btnIndex = index;
                         window.location.href="area.html?index="+index
-                    }
+                    },
+                    getRankingData:function(){
+                        var This = this;
+                        this.boardState = true;
+                        this.loading.status = true;
+                        $.ajax({
+                            type:'GET',
+                            url:this.getRanking,
+                            dataType:'json',
+                            cache:false,
+                            success:function(res){
+                                this.loading.status = false;
+                                if(res.status == 0){
+                                    This.rankList = res.data;   
+                                }else{
+                                    this.alertHandle(res.msg)
+                                }
+                            }
+                        })
+                    },
+                    //处理提示弹框函数
+                    alertHandle:function(msg){
+                        var This = this;
+                        this.alert.status = true;
+                        this.alert.txt = msg;
+                        setTimeout(function(){
+                            This.alert.status = false;
+                            this.alert.txt = '';
+                        },1500)
+                    },
                 },
                 mounted: function () {
                 }
