--- a/area.html
+++ b/area.html
@@ -385,61 +385,6 @@
             vote_num:'1000'
         },{
             vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },
-        {
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
-        },{
-            vote_num:'1000'
         }]
         //加载资源数组必须在loading之前进行配置
         $(function () {
@@ -447,7 +392,7 @@
                 el: "#area",
                 data: {
                     index:null,
-                    companyList:companyList,
+                    companyList:[],
                     handleArr:handleArr,
                     getEnterprise:'getEnterprise',              //获取企业列列表数据接⼝
 
