--- a/index.html
+++ b/index.html
@@ -148,25 +148,22 @@
     <script type="text/javascript">
         var basep = "images/", //图片目录
             preLoadSource = [ //背景资源
-                basep + "active_btn.png",
-                basep + "area1.jpg",
-                basep + "area2.jpg",
-                basep + "area3.jpg",
-                basep + "area4.jpg",
-                basep + "back.png",
-                basep + "bg.jpg",
-                basep + "board.png",
-                basep + "btn_1.png",
-                basep + "btn_2.png",
-                basep + "btn_3.png",
-                basep + "btn_4.png",
-                basep + "detail_bg_01.png",
-                basep + "detail_bg_02.png",
-                basep + "detail_bg_03.png",
-                basep + "logo.png",
-                basep + "rule.png",
-                basep + "title.png",
-                basep + "toupiao.png"
+            basep + "active_btn.png",
+            basep + "back.png",
+            basep + "bg.jpg",
+            basep + "board.png",
+            basep + "btn_1.png",
+            basep + "btn_2.png",
+            basep + "btn_3.png",
+            basep + "btn_4.png",
+            basep + "detail_bg_01.png",
+            basep + "detail_bg_02.png",
+            basep + "detail_bg_03.png",
+            basep + "house.jpg",
+            basep + "rule.png",
+            basep + "title.png",
+            basep + "toupiao.png",
+            basep + "toupiao_gray.png",
             ];
     </script>
     <script src="js/loading.js"></script>
